--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -132,10 +132,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "336df9bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver CSV does not support open option SEP\n",
+      "  return ogr_read(\n"
+     ]
+    }
+   ],
    "source": [
     "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')\n",
     "gdf = gdf.rename(columns = {'id_amat':'id_stazione',\n",
@@ -144,12 +153,12 @@
     "                           'LAT_Y_4326': 'latitudine',\n",
     "                           'Location':'location'})\n",
     "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)\n",
-    "gdf['icon'] = \"events\""
+    "gdf['icon'] = \"share\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "5f449304",
    "metadata": {},
    "outputs": [],
@@ -161,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "909ac5c3",
    "metadata": {},
    "outputs": [],
