--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "id": "aa9e1892",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -31,11 +31,13 @@
     "PATH_MUNICIPI_RAW = \"../Data/Raw/Punti_di_interesse/Municipi/Municipi.shp\"\n",
     "PATH_PARCHI_RAW = \"../Data/Raw/Punti_di_interesse/Parchi/Parchi_WGS84_Milano_1.shp\"\n",
     "PATH_FONTANE_RAW = \"../Data/Raw/Punti_di_interesse/fontane_raw.csv\"\n",
+    "PATH_BIBLIOTECHE_RAW = \"../Data/Raw/Punti_di_interesse/biblioteche_raw.geojson\"\n",
     "\n",
     "#PATH CLEAN\n",
     "PATH_MUNICIPI_CLEAN = \"../Data/Clean/Punti_di_interesse/municipi_clean.geojson\"\n",
     "PATH_PARCHI_CLEAN = \"../Data/Clean/Punti_di_interesse/parchi_clean.geojson\"\n",
-    "PATH_FONTANE_CLEAN = \"../Data/Clean/Punti_di_interesse/fontane_clean.geojson\""
+    "PATH_FONTANE_CLEAN = \"../Data/Clean/Punti_di_interesse/fontane_clean.geojson\"\n",
+    "PATH_BIBLIOTECHE_CLEAN = \"../Data/Clean/Punti_di_interesse/biblioteche_clean.geojson\""
    ]
   },
   {
@@ -113,6 +115,37 @@
     "gdf['icon'] = \"events\"\n",
     "gdf = gpd.GeoDataFrame(gdf, geometry=\"geometry\", crs=\"EPSG:4326\")\n",
     "gdf.to_file(PATH_FONTANE_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd5e252",
+   "metadata": {},
+   "source": [
+    "# Biblioteche"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e36db582",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_BIBLIOTECHE_RAW)\n",
+    "column = {\n",
+    "    \"Indirizzo\": \"Indirizzo\",\n",
+    "    \"CAP\": \"CAP\",\n",
+    "    \"MUNICIPIO\": \"Municipio\",\n",
+    "    \"NIL\": \"Quartiere\",\n",
+    "    \"long\": \"Longitudine\",\n",
+    "    \"lat\": \"Latitudine\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "gdf = gdf[column.keys()]\n",
+    "gdf[\"icon\"] = \"place\"\n",
+    "gdf = gdf.rename(columns=column)\n",
+    "gdf.to_file(PATH_BIBLIOTECHE_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
