--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -147,11 +147,151 @@
     "gdf = gdf.rename(columns=column)\n",
     "gdf.to_file(PATH_BIBLIOTECHE_CLEAN, driver=\"GeoJSON\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a0e38ba",
+   "metadata": {},
+   "source": [
+    "# Biblioteche Lorenzo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1d98873",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Percorso file di input e output\n",
+    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/biblioteche_raw.geojson\"\n",
+    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/biblioteche_clean.geojson\"\n",
+    "\n",
+    "# Carica il file GeoJSON\n",
+    "gdf = gpd.read_file(INPUT_PATH)\n",
+    "\n",
+    "# Rimuovo le colonne indesiderate\n",
+    "gdf = gdf.drop(columns=[\"INDIRIZZO\", \"TELEFONO\", \"FAX\", \"URL\", \"E_MAIL\", \"SOTTOTIPO\", \"CATEGORIA\", \"DISABILI\", \"INFO\", \"ENTE\", \"CIV_NUM\", \"CIV_BAR\", \"COD_VIA\", \"MATRICE\", \"X\", \"Y\", \"ID\", \"ID_NIL\", \"Location\"])\n",
+    "\n",
+    "# Rinomino le colonne\n",
+    "gdf = gdf.rename(columns={\n",
+    "    \"ZONA\": \"MUNICIPIO\",\n",
+    "    \"LAT_Y_4326\": \"latitudine\",\n",
+    "    \"LONG_X_4326\": \"longitudine\"\n",
+    "})\n",
+    "\n",
+    "# Rimuovo le colonne dove municipio == 0\n",
+    "gdf = gdf[gdf[\"MUNICIPIO\"].astype(str).str.strip() != \"0\"]\n",
+    "\n",
+    "# Creo la colonna geometry\n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
+    "\n",
+    "# Imposto sistema di coordinate geografico\n",
+    "gdf.set_crs(epsg=4326, inplace=True)\n",
+    "\n",
+    "gdf[\"icon\"] = \"bookmark\"\n",
+    "\n",
+    "# Esporto il GeoJSON pulito\n",
+    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f921b37d",
+   "metadata": {},
+   "source": [
+    "# Case dell'acqua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d1bb87",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Percorso file di input e output\n",
+    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/case_acqua_raw.geojson\"\n",
+    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/case_acqua_clean.geojson\"\n",
+    "\n",
+    "# Carica il file GeoJSON\n",
+    "gdf = gpd.read_file(INPUT_PATH)\n",
+    "\n",
+    "# Rimuovo le colonne indesiderate\n",
+    "gdf = gdf.drop(columns=[\"CAP\", \"ID_NIL\", \"Location\"])\n",
+    "\n",
+    "# Rinomino le colonne\n",
+    "gdf = gdf.rename(columns={\n",
+    "    \"LONG_X_4326\": \"longitudine\",\n",
+    "    \"LAT_Y_4326\": \"latitudine\"\n",
+    "})\n",
+    "\n",
+    "# Creo la colonna geometry \n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
+    "\n",
+    "# Imposto il sistema di coordinate\n",
+    "gdf.set_crs(epsg=4326, inplace=True)\n",
+    "\n",
+    "# Esporto il GeoJSON pulito\n",
+    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4bd3c563",
+   "metadata": {},
+   "source": [
+    "# Farmacie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db01d35f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Percorso file di input e output\n",
+    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/farmacie_raw.geojson\"\n",
+    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/farmacie_clean.geojson\"\n",
+    "\n",
+    "# Carica il file GeoJSON\n",
+    "gdf = gpd.read_file(INPUT_PATH)\n",
+    "\n",
+    "# Rimuovo le colonne indesiderate\n",
+    "gdf = gdf.drop(columns=[\"CODICE_FARMACIA\", \"PARTITA_IVA\", \"COMUNE\", \"FRAZIONE\", \"CAP\", \"PROVINCIA\", \"CODICE_ISTAT\", \"ID_NIL\", \"Location\"])\n",
+    "\n",
+    "# Rinomino le colonne\n",
+    "gdf = gdf.rename(columns={\n",
+    "    \"LATITUDINE\": \"latitudine\",\n",
+    "    \"LONGITUDINE\": \"longitudine\"\n",
+    "})\n",
+    "\n",
+    "# Creo la colonna geometry\n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
+    "\n",
+    "# Imposto sistema di coordinate geografico\n",
+    "gdf.set_crs(epsg=4326, inplace=True)\n",
+    "\n",
+    "gdf[\"icon\"] = \"control-on\"\n",
+    "\n",
+    "# Esporto il GeoJSON pulito\n",
+    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
