--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "95ff2939",
+   "id": "a44a6309",
    "metadata": {},
    "source": [
     "# Punti di interesse"
@@ -10,23 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "aa9e1892",
+   "execution_count": null,
+   "id": "e4ded582",
    "metadata": {},
    "outputs": [],
    "source": [
     "from shapely import Point\n",
     "\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "e4ded582",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import geopandas as gpd\n",
+    "\n",
     "#PATH RAW\n",
     "PATH_MUNICIPI_RAW = \"../Data/Raw/Punti_di_interesse/Municipi/Municipi.shp\"\n",
     "PATH_PARCHI_RAW = \"../Data/Raw/Punti_di_interesse/Parchi/Parchi_WGS84_Milano_1.shp\"\n",
@@ -126,6 +118,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d93ee93",
+   "metadata": {},
+   "source": [
+    "# Impianti sportivi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0de00c19",
+   "metadata": {},
+   "source": [
+    "1. Rimozione righe in cui non è segnalata una data inizio costruzione\n",
+    "2. Rimozione delle piste ciclabili, dato che abbiamo un dataset apposito\n",
+    "3. Convertiamo la data in un intero, in modo da poter filtrare agilmente su kepler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d4c4779",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_IMPIANTI_SPORTIVI_RAW)\n",
+    "gdf = gdf[[\"municipio\", \"località\", \"obj_id\", \"data_ini\", \"area_mq\", \"perim_m\", \"descrizione_codice\", \"geometry\"]]\n",
+    "gdf = gdf.rename(columns={\"data_ini\": \"anno_inizio\", \"obj_id\": \"id_impianto\"})\n",
+    "\n",
+    "gdf = gdf[gdf[\"anno_inizio\"].notna()].reset_index()\n",
+    "gdf[\"anno_inizio\"] = gdf[\"anno_inizio\"].apply(lambda x: x.year)\n",
+    "\n",
+    "gdf = gdf[~gdf[\"descrizione_codice\"].str.contains(\"pista ciclabile\", case=False, na=False)].reset_index()\n",
+    "gdf = gdf.drop(columns=[\"level_0\", \"index\"], errors=\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "addcb3b7",
+   "metadata": {},
+   "source": [
+    "Salviamo in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f53a865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_IMPIANTI_SPORTIVI_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dd5e252",
+   "metadata": {},
+   "source": [
+    "# Biblioteche"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 47,
    "id": "e36db582",
@@ -150,162 +204,6 @@
   },
   {
    "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "2a0e38ba",
-   "metadata": {},
-   "source": [
-    "# Biblioteche Lorenzo"
-=======
-   "id": "2d93ee93",
-   "metadata": {},
-   "source": [
-    "# Impianti sportivi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0de00c19",
-   "metadata": {},
-   "source": [
-    "1. Rimozione righe in cui non è segnalata una data inizio costruzione\n",
-    "2. Rimozione delle piste ciclabili, dato che abbiamo un dataset apposito\n",
-    "3. Convertiamo la data in un intero, in modo da poter filtrare agilmente su kepler"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-<<<<<<< HEAD
-   "id": "e1d98873",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point\n",
-    "\n",
-    "# Percorso file di input e output\n",
-    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/biblioteche_raw.geojson\"\n",
-    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/biblioteche_clean.geojson\"\n",
-    "\n",
-    "# Carica il file GeoJSON\n",
-    "gdf = gpd.read_file(INPUT_PATH)\n",
-    "\n",
-    "# Rimuovo le colonne indesiderate\n",
-    "gdf = gdf.drop(columns=[\"INDIRIZZO\", \"TELEFONO\", \"FAX\", \"URL\", \"E_MAIL\", \"SOTTOTIPO\", \"CATEGORIA\", \"DISABILI\", \"INFO\", \"ENTE\", \"CIV_NUM\", \"CIV_BAR\", \"COD_VIA\", \"MATRICE\", \"X\", \"Y\", \"ID\", \"ID_NIL\", \"Location\"])\n",
-    "\n",
-    "# Rinomino le colonne\n",
-    "gdf = gdf.rename(columns={\n",
-    "    \"ZONA\": \"MUNICIPIO\",\n",
-    "    \"LAT_Y_4326\": \"latitudine\",\n",
-    "    \"LONG_X_4326\": \"longitudine\"\n",
-    "})\n",
-    "\n",
-    "# Rimuovo le colonne dove municipio == 0\n",
-    "gdf = gdf[gdf[\"MUNICIPIO\"].astype(str).str.strip() != \"0\"]\n",
-    "\n",
-    "# Creo la colonna geometry\n",
-    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
-    "\n",
-    "# Imposto sistema di coordinate geografico\n",
-    "gdf.set_crs(epsg=4326, inplace=True)\n",
-    "\n",
-    "gdf[\"icon\"] = \"bookmark\"\n",
-    "\n",
-    "# Esporto il GeoJSON pulito\n",
-    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
-=======
-   "id": "6d4c4779",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf = gpd.read_file(PATH_IMPIANTI_SPORTIVI_RAW)\n",
-    "gdf = gdf[[\"municipio\", \"località\", \"obj_id\", \"data_ini\", \"area_mq\", \"perim_m\", \"descrizione_codice\", \"geometry\"]]\n",
-    "gdf = gdf.rename(columns={\"data_ini\": \"anno_inizio\", \"obj_id\": \"id_impianto\"})\n",
-    "\n",
-    "gdf = gdf[gdf[\"anno_inizio\"].notna()].reset_index()\n",
-    "gdf[\"anno_inizio\"] = gdf[\"anno_inizio\"].apply(lambda x: x.year)\n",
-    "\n",
-    "gdf = gdf[~gdf[\"descrizione_codice\"].str.contains(\"pista ciclabile\", case=False, na=False)].reset_index()\n",
-    "gdf = gdf.drop(columns=[\"level_0\", \"index\"], errors=\"ignore\")"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
-   ]
-  },
-  {
-   "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "f921b37d",
-   "metadata": {},
-   "source": [
-    "# Case dell'acqua"
-=======
-   "id": "addcb3b7",
-   "metadata": {},
-   "source": [
-    "Salviamo in Clean"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-<<<<<<< HEAD
-   "id": "12d1bb87",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point\n",
-    "\n",
-    "# Percorso file di input e output\n",
-    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/case_acqua_raw.geojson\"\n",
-    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/case_acqua_clean.geojson\"\n",
-    "\n",
-    "# Carica il file GeoJSON\n",
-    "gdf = gpd.read_file(INPUT_PATH)\n",
-    "\n",
-    "# Rimuovo le colonne indesiderate\n",
-    "gdf = gdf.drop(columns=[\"CAP\", \"ID_NIL\", \"Location\"])\n",
-    "\n",
-    "# Rinomino le colonne\n",
-    "gdf = gdf.rename(columns={\n",
-    "    \"LONG_X_4326\": \"longitudine\",\n",
-    "    \"LAT_Y_4326\": \"latitudine\"\n",
-    "})\n",
-    "\n",
-    "# Creo la colonna geometry \n",
-    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
-    "\n",
-    "# Imposto il sistema di coordinate\n",
-    "gdf.set_crs(epsg=4326, inplace=True)\n",
-    "\n",
-    "# Esporto il GeoJSON pulito\n",
-    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
-=======
-   "id": "9f53a865",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf.to_file(PATH_IMPIANTI_SPORTIVI_CLEAN, driver=\"GeoJSON\")"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
-   ]
-  },
-  {
-   "cell_type": "markdown",
-<<<<<<< HEAD
-   "id": "4bd3c563",
-   "metadata": {},
-   "source": [
-    "# Farmacie"
-=======
-   "id": "3dd5e252",
-   "metadata": {},
-   "source": [
-    "# Biblioteche"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "8e79eebc",
    "metadata": {},
    "source": [
@@ -318,47 +216,11 @@
    "metadata": {},
    "source": [
     "Carichiamo tutti i file raw come gdf"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-<<<<<<< HEAD
-   "id": "db01d35f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point\n",
-    "\n",
-    "# Percorso file di input e output\n",
-    "INPUT_PATH = \"../Data/Raw/Punti_di_interesse/farmacie_raw.geojson\"\n",
-    "OUTPUT_PATH = \"../Data/Clean/Punti_di_interesse/farmacie_clean.geojson\"\n",
-    "\n",
-    "# Carica il file GeoJSON\n",
-    "gdf = gpd.read_file(INPUT_PATH)\n",
-    "\n",
-    "# Rimuovo le colonne indesiderate\n",
-    "gdf = gdf.drop(columns=[\"CODICE_FARMACIA\", \"PARTITA_IVA\", \"COMUNE\", \"FRAZIONE\", \"CAP\", \"PROVINCIA\", \"CODICE_ISTAT\", \"ID_NIL\", \"Location\"])\n",
-    "\n",
-    "# Rinomino le colonne\n",
-    "gdf = gdf.rename(columns={\n",
-    "    \"LATITUDINE\": \"latitudine\",\n",
-    "    \"LONGITUDINE\": \"longitudine\"\n",
-    "})\n",
-    "\n",
-    "# Creo la colonna geometry\n",
-    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
-    "\n",
-    "# Imposto sistema di coordinate geografico\n",
-    "gdf.set_crs(epsg=4326, inplace=True)\n",
-    "\n",
-    "gdf[\"icon\"] = \"control-on\"\n",
-    "\n",
-    "# Esporto il GeoJSON pulito\n",
-    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")\n"
-=======
    "id": "f3e1f1e9",
    "metadata": {},
    "outputs": [],
@@ -516,13 +378,12 @@
    "outputs": [],
    "source": [
     "final_gdf.to_file(PATH_SCUOLE_CLEAN, driver=\"GeoJSON\")"
->>>>>>> 35cd86b838e0aa142c32390bccb21943c22a2604
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
