--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -204,6 +204,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b2ea8777",
+   "metadata": {},
+   "source": [
+    "Quello di Lorenzo:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "307d5c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Point\n",
+    "\n",
+    "# Percorso file di input e output\n",
+    "INPUT_PATH = \"Biblioteche/biblioteche_raw.geojson\"\n",
+    "OUTPUT_PATH = \"Biblioteche/biblioteche_clean.geojson\"\n",
+    "\n",
+    "# Carica il file GeoJSON\n",
+    "gdf = gpd.read_file(INPUT_PATH)\n",
+    "\n",
+    "# Rimuovo le colonne indesiderate\n",
+    "gdf = gdf.drop(columns=[\"INDIRIZZO\", \"TELEFONO\", \"FAX\", \"URL\", \"E_MAIL\", \"SOTTOTIPO\", \"CATEGORIA\", \"DISABILI\", \"INFO\", \"ENTE\", \"CIV_NUM\", \"CIV_BAR\", \"COD_VIA\", \"MATRICE\", \"X\", \"Y\", \"ID\", \"ID_NIL\", \"Location\"])\n",
+    "\n",
+    "# Rinomino le colonne\n",
+    "gdf = gdf.rename(columns={\n",
+    "    \"ZONA\": \"MUNICIPIO\",\n",
+    "    \"LAT_Y_4326\": \"latitudine\",\n",
+    "    \"LONG_X_4326\": \"longitudine\"\n",
+    "})\n",
+    "\n",
+    "# Rimuovo le colonne dove municipio == 0\n",
+    "gdf = gdf[gdf[\"MUNICIPIO\"].astype(str).str.strip() != \"0\"]\n",
+    "\n",
+    "# Creo la colonna geometry\n",
+    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
+    "\n",
+    "# Imposto sistema di coordinate geografico\n",
+    "gdf.set_crs(epsg=4326, inplace=True)\n",
+    "\n",
+    "gdf[\"icon\"] = \"bookmark\"\n",
+    "\n",
+    "# Esporto il GeoJSON pulito\n",
+    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8e79eebc",
    "metadata": {},
    "source": [
@@ -383,7 +433,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -397,7 +447,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
