--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "7cd24381",
    "metadata": {},
    "outputs": [],
@@ -21,21 +21,9 @@
     "import requests\n",
     "from sseclient import SSEClient\n",
     "from tqdm import tqdm\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "170c6076",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# RAW\n",
-    "PATH_INQUINAMENTO_INGESTION_RAW = \"../Data/Raw/Inquinamento/Airnet/inquinamento-airnet_media_raw.geojson\"\n",
+    "import geopandas as gpd\n",
     "\n",
-    "# CLEAN\n",
-    "PATH_INQUINAMENTO_INGESTION_CLEAN = \"../Data/Clean/Inquinamento/Airnet/inquinamento-airnet_ingestion_clean.geojson\""
+    "from my_paths import *"
    ]
   },
   {
