--- a/Scripts/Info_bici.ipynb
+++ b/Scripts/Info_bici.ipynb
@@ -9,40 +9,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "76a32828",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from shapely import Point\n",
+    "\n",
+    "import geopandas as gpd\n",
+    "\n",
+    "from my_paths import *"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e61d6978",
    "metadata": {},
    "source": [
     "## Piste ciclabili"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76a32828",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "793e7ed0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH_CICLABILI_RAW = \"../Data/Raw/Info_bici/bike_ciclabili_raw.geojson\"\n",
-    "PATH_CICLABILI_CLEAN = \"../Data/Clean/Info_bici/bike_ciclabili_clean.geojson\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0213b41a",
-   "metadata": {},
-   "source": [
-    "### ETL"
    ]
   },
   {
@@ -55,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2b615b5e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6d66511e",
    "metadata": {},
    "outputs": [],
@@ -102,49 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d18bf54",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from shapely import Point\n",
-    "\n",
-    "import geopandas as gpd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6ec20fe9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PATH_BIKEMI_RAW = '../Data/Raw/Info_bici/bikemi_stazioni_raw.csv'\n",
-    "PATH_BIKEMI_CLEAN = \"../Data/Clean/Info_bici/bikemi_stazioni_clean.geojson\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "90226ed3",
-   "metadata": {},
-   "source": [
-    "### ETL"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "336df9bb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Matteo\\Coding\\Project\\Progetto Esame BI\\.venv\\Lib\\site-packages\\pyogrio\\raw.py:198: RuntimeWarning: driver CSV does not support open option SEP\n",
-      "  return ogr_read(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_BIKEMI_RAW, sep = ';')\n",
     "gdf = gdf.rename(columns = {'id_amat':'id_stazione',\n",
@@ -153,16 +99,7 @@
     "                           'LAT_Y_4326': 'latitudine',\n",
     "                           'Location':'location'})\n",
     "gdf.drop(['stato', 'id_via', 'indirizzo', 'civico', 'zd_attuale', 'anno', \"tipo\"], axis=1, inplace=True)\n",
-    "gdf['icon'] = \"share\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "5f449304",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gdf['icon'] = \"share\"\n",
     "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row['longitudine'], row['latitudine']), axis=1)\n",
     "gdf = gdf.set_geometry(\"geometry\", crs=4326)\n",
     "gdf = gdf.drop(columns=\"location\")"
