--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -19,25 +19,7 @@
     "\n",
     "import geopandas as gpd\n",
     "\n",
-    "#PATH RAW\n",
-    "PATH_MUNICIPI_RAW = \"../Data/Raw/Punti_di_interesse/Municipi/Municipi.shp\"\n",
-    "PATH_PARCHI_RAW = \"../Data/Raw/Punti_di_interesse/Parchi/Parchi_WGS84_Milano_1.shp\"\n",
-    "PATH_FONTANE_RAW = \"../Data/Raw/Punti_di_interesse/fontane_raw.csv\"\n",
-    "PATH_BIBLIOTECHE_RAW = \"../Data/Raw/Punti_di_interesse/biblioteche_raw.geojson\"\n",
-    "PATH_IMPIANTI_SPORTIVI_RAW = \"../Data/Raw/Punti_di_interesse/impianti_sportivi_raw.geojson\"\n",
-    "#   Scuole\n",
-    "PATH_SCUOLE_PRIMARIE_RAW = \"../Data/Raw/Istruzione/Scuole/scuole-primarie_raw.geojson\"\n",
-    "PATH_SCUOLE_SECONDARIE_PRIMO_RAW = \"../Data/Raw/Istruzione/Scuole/scuole-secondarie-primo-grado_raw.geojson\"\n",
-    "PATH_SCUOLE_SECONDARIE_SECONDO_RAW = \"../Data/Raw/Istruzione/Scuole/scuole-secondarie-secondo-grado_raw.geojson\"\n",
-    "PATH_UNIVERSITA_RAW = \"../Data/Raw/Istruzione/Scuole/universita_raw.geojson\"\n",
-    "\n",
-    "#PATH CLEAN\n",
-    "PATH_MUNICIPI_CLEAN = \"../Data/Clean/Punti_di_interesse/municipi_clean.geojson\"\n",
-    "PATH_PARCHI_CLEAN = \"../Data/Clean/Punti_di_interesse/parchi_clean.geojson\"\n",
-    "PATH_FONTANE_CLEAN = \"../Data/Clean/Punti_di_interesse/fontane_clean.geojson\"\n",
-    "PATH_BIBLIOTECHE_CLEAN = \"../Data/Clean/Punti_di_interesse/biblioteche_clean.geojson\"\n",
-    "PATH_IMPIANTI_SPORTIVI_CLEAN = \"../Data/Clean/Punti_di_interesse/impianti_sportivi_clean.geojson\"\n",
-    "PATH_SCUOLE_CLEAN = \"../Data/Clean/Istruzione/Scuole/scuole_clean.geojson\""
+    "from my_paths import *"
    ]
   },
   {
@@ -181,12 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "e36db582",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_BIBLIOTECHE_RAW)\n",
+    "print(type(gdf))\n",
     "column = {\n",
     "    \"Indirizzo\": \"Indirizzo\",\n",
     "    \"CAP\": \"CAP\",\n",
@@ -199,57 +182,8 @@
     "gdf = gdf[column.keys()]\n",
     "gdf[\"icon\"] = \"place\"\n",
     "gdf = gdf.rename(columns=column)\n",
+    "\n",
     "gdf.to_file(PATH_BIBLIOTECHE_CLEAN, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b2ea8777",
-   "metadata": {},
-   "source": [
-    "Quello di Lorenzo:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "307d5c6b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import geopandas as gpd\n",
-    "from shapely.geometry import Point\n",
-    "\n",
-    "# Percorso file di input e output\n",
-    "INPUT_PATH = \"Biblioteche/biblioteche_raw.geojson\"\n",
-    "OUTPUT_PATH = \"Biblioteche/biblioteche_clean.geojson\"\n",
-    "\n",
-    "# Carica il file GeoJSON\n",
-    "gdf = gpd.read_file(INPUT_PATH)\n",
-    "\n",
-    "# Rimuovo le colonne indesiderate\n",
-    "gdf = gdf.drop(columns=[\"INDIRIZZO\", \"TELEFONO\", \"FAX\", \"URL\", \"E_MAIL\", \"SOTTOTIPO\", \"CATEGORIA\", \"DISABILI\", \"INFO\", \"ENTE\", \"CIV_NUM\", \"CIV_BAR\", \"COD_VIA\", \"MATRICE\", \"X\", \"Y\", \"ID\", \"ID_NIL\", \"Location\"])\n",
-    "\n",
-    "# Rinomino le colonne\n",
-    "gdf = gdf.rename(columns={\n",
-    "    \"ZONA\": \"MUNICIPIO\",\n",
-    "    \"LAT_Y_4326\": \"latitudine\",\n",
-    "    \"LONG_X_4326\": \"longitudine\"\n",
-    "})\n",
-    "\n",
-    "# Rimuovo le colonne dove municipio == 0\n",
-    "gdf = gdf[gdf[\"MUNICIPIO\"].astype(str).str.strip() != \"0\"]\n",
-    "\n",
-    "# Creo la colonna geometry\n",
-    "gdf[\"geometry\"] = gdf.apply(lambda row: Point(row[\"longitudine\"], row[\"latitudine\"]), axis=1)\n",
-    "\n",
-    "# Imposto sistema di coordinate geografico\n",
-    "gdf.set_crs(epsg=4326, inplace=True)\n",
-    "\n",
-    "gdf[\"icon\"] = \"bookmark\"\n",
-    "\n",
-    "# Esporto il GeoJSON pulito\n",
-    "gdf.to_file(OUTPUT_PATH, driver=\"GeoJSON\")"
    ]
   },
   {
