--- a/Scripts/Strade.ipynb
+++ b/Scripts/Strade.ipynb
@@ -10,14 +10,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "53701f79",
    "metadata": {},
    "outputs": [],
    "source": [
     "from shapely import MultiLineString, LineString, Polygon, MultiPolygon\n",
     "\n",
-    "import geopandas as gpd"
+    "import geopandas as gpd\n",
+    "\n",
+    "from my_paths import *"
    ]
   },
   {
