--- a/Scripts/prova_strade.ipynb
+++ b/Scripts/prova_strade.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "29e4158a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "import geopandas as gpd\n",
-    "\n",
-    "from my_paths import *"
+    "import geopandas as gpd"
    ]
   },
   {
