--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -22,11 +22,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gdf_ciclabili = gdp.read_file(PATH_CICLABILI_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_bikemi = gdp.read_file(PATH_BIKEMI_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_parchi = gdp.read_file(PATH_PARCHI_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_biblioteche = gdp.read_file(PATH_BIBLIOTECHE_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_impianti_sportivi = gdp.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_fontane = gdp.read_file(PATH_FONTANE_CLEAN).to_crs(\"EPSG:32632\")\n",
+    "gdf_inquinamento = gdp.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN).to_crs(\"EPSG:32632\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93122f21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "buffer_union = gdf_ciclabili.buffer(1000).unary_union\n",
+    "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(buffer_union)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "361e9c20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(gdf_parchi.info())\n",
+    "print(parchi_non_vicini)"
+   ]
   }
  ],
  "metadata": {
