--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -363,11 +363,79 @@
    "source": [
     "final_gdf.to_file(PATH_SCUOLE_CLEAN, driver=\"GeoJSON\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "528e761f",
+   "metadata": {},
+   "source": [
+    "# Farmacie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a58de58c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geopandas as gpd\n",
+    "\n",
+    "from my_paths import *"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67ad38a",
+   "metadata": {},
+   "source": [
+    "Rinominiamo e filtriamo le colonne che ci interessano"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "75d186dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_FARMACIE_RAW)\n",
+    "column = {\n",
+    "    \"DESCRIZIONE_FARMACIA\": \"Descrizione_farmacia\",\n",
+    "    \"CAP\":\"CAP\",\n",
+    "    \"MUNICIPIO\": \"Municipio\",\n",
+    "    \"NIL\": \"Quartiere\",\n",
+    "    \"LONGITUDINE\": \"Longitudine\",\n",
+    "    \"LATITUDINE\": \"Latitudine\",\n",
+    "    \"geometry\": \"geometry\"\n",
+    "}\n",
+    "gdf = gdf[column.keys()]\n",
+    "gdf[\"icon\"] = \"control-on\"\n",
+    "gdf = gdf.rename(columns=column)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "172f5213",
+   "metadata": {},
+   "source": [
+    "Salviamo in Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c723552f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf.to_file(PATH_FARMACIE_CLEAN, driver=\"GeoJSON\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -381,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
