Piccolo fix e integrazione Aree gioco

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -430,6 +430,64 @@
    "outputs": [],
    "source": [
     "gdf.to_file(PATH_FARMACIE_CLEAN, driver=\"GeoJSON\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a714718",
+   "metadata": {},
+   "source": [
+    "# Aree Gioco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1177187b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_fill_date(row, reference_gdf):\n",
+    "    area = row[\"area\"]\n",
+    "    localita = row[\"località\"]\n",
+    "    obj_id = row[\"obj_id\"]\n",
+    "    \n",
+    "    match = reference_gdf[\n",
+    "        (reference_gdf[\"area\"] == area) &\n",
+    "        (reference_gdf[\"località\"] == localita) &\n",
+    "        (~reference_gdf[\"data_ini\"].isna()) &\n",
+    "        (reference_gdf[\"data_ini\"].astype(str).str.strip() != \"\")\n",
+    "    ]\n",
+    "    if not match.empty:\n",
+    "        idx = (match[\"obj_id\"] - obj_id).abs().idxmin() # Troviamo quello che si avicina di più come obj_id\n",
+    "        return reference_gdf.loc[idx, \"data_ini\"]\n",
+    "    else:\n",
+    "        return \"2025-01-01\"\n",
+    "\n",
+    "gdf = gpd.read_file(PATH_AREE_GIOCO_RAW)\n",
+    "\n",
+    "# Modifico i valori mancanti di \"data_ini\"\n",
+    "valori_mancanti = gdf[\"data_ini\"].isna() | (gdf[\"data_ini\"].astype(str).str.strip() == \"\")\n",
+    "\n",
+    "gdf.loc[valori_mancanti, \"data_ini\"] = gdf[valori_mancanti].apply(lambda row: get_fill_date(row, gdf), axis=1)\n",
+    "gdf[\"data_ini\"] = gpd.pd.to_datetime(gdf[\"data_ini\"]).dt.year\n",
+    "\n",
+    "# Filtro gli anni che non mi interessano\n",
+    "gdf = gdf[~gdf[\"data_ini\"].isin([2024, 2025])]\n",
+    "\n",
+    "# Elimino colonne superflue\n",
+    "gdf = gdf.drop(columns=[\"id_area\", \"obj_id\", \"codice\", \"descrizione_codice\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d81422",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Salvo GeoJSON pulito\n",
+    "gdf.to_file(PATH_AREE_GIOCO_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
