update aree gioco

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -438,6 +438,18 @@
    "metadata": {},
    "source": [
     "# Aree Gioco"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fbd84e01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_AREE_GIOCO_RAW)\n",
+    "gdf = gdf.sort_values(\"obj_id\").reset_index()\n",
+    "gdf = gdf.to_csv(\"test.csv\")"
    ]
   },
   {
