sistemato algoritmo aree gioco

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -441,51 +441,69 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "fbd84e01",
+   "cell_type": "markdown",
+   "id": "f2bdab95",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_AREE_GIOCO_RAW)\n",
-    "gdf = gdf.sort_values(\"obj_id\").reset_index()\n",
-    "gdf = gdf.to_csv(\"test.csv\")"
+    "Carichiamo il dataframe e modifichiamo la \"data_ini\" in un intero in cui teniamo solo l'anno."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "id": "b4a1e8ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf = gpd.read_file(PATH_AREE_GIOCO_RAW)\n",
+    "gdf[\"data_ini\"] = gpd.pd.to_datetime(gdf[\"data_ini\"]).dt.year.astype(\"Int64\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bb588c7",
+   "metadata": {},
+   "source": [
+    "Creo un dizionario che associa ad ogni range di obj_id la data_ini più probabile in base a quelle presenti nel df.  \n",
+    "Questo ci permetterà di sintetizzare le data_ini quando mancano."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fbd84e01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_ranges = list(zip(range(0, 170_001, 10_000), range(9_999, 180_001, 10_000)))\n",
+    "\n",
+    "id_data = {}\n",
+    "for start_id, end_id in id_ranges:\n",
+    "    df_range = gdf[(gdf[\"obj_id\"] >= start_id) & (gdf[\"obj_id\"] <= end_id)]\n",
+    "    if not df_range.empty:\n",
+    "        data_counts = df_range[\"data_ini\"].value_counts()\n",
+    "        id_data[gpd.pd.Interval(start_id, end_id, closed=\"both\")] = {\n",
+    "            \"data\":  data_counts.idxmax(),\n",
+    "            \"percentuale\": round(data_counts.max() / data_counts.sum() * 100, 2)\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "1177187b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_fill_date(row, reference_gdf):\n",
-    "    area = row[\"area\"]\n",
-    "    localita = row[\"località\"]\n",
-    "    obj_id = row[\"obj_id\"]\n",
-    "    \n",
-    "    match = reference_gdf[\n",
-    "        (reference_gdf[\"area\"] == area) &\n",
-    "        (reference_gdf[\"località\"] == localita) &\n",
-    "        (~reference_gdf[\"data_ini\"].isna()) &\n",
-    "        (reference_gdf[\"data_ini\"].astype(str).str.strip() != \"\")\n",
-    "    ]\n",
-    "    if not match.empty:\n",
-    "        idx = (match[\"obj_id\"] - obj_id).abs().idxmin() # Troviamo quello che si avicina di più come obj_id\n",
-    "        return reference_gdf.loc[idx, \"data_ini\"]\n",
-    "    else:\n",
-    "        return \"2025-01-01\"\n",
-    "\n",
-    "gdf = gpd.read_file(PATH_AREE_GIOCO_RAW)\n",
+    "def get_fill_date(row, id_data_reference:dict):\n",
+    "    for interval, data in id_data_reference.items():\n",
+    "        if row[\"obj_id\"] in interval:\n",
+    "            return data[\"data\"]\n",
+    "    return None\n",
     "\n",
     "# Modifico i valori mancanti di \"data_ini\"\n",
     "valori_mancanti = gdf[\"data_ini\"].isna() | (gdf[\"data_ini\"].astype(str).str.strip() == \"\")\n",
-    "\n",
-    "gdf.loc[valori_mancanti, \"data_ini\"] = gdf[valori_mancanti].apply(lambda row: get_fill_date(row, gdf), axis=1)\n",
-    "gdf[\"data_ini\"] = gpd.pd.to_datetime(gdf[\"data_ini\"]).dt.year\n",
-    "\n",
-    "# Filtro gli anni che non mi interessano\n",
-    "gdf = gdf[~gdf[\"data_ini\"].isin([2024, 2025])]\n",
+    "gdf.loc[valori_mancanti, \"data_ini\"] = gdf[valori_mancanti].apply(lambda row: get_fill_date(row, id_data), axis=1)\n",
     "\n",
     "# Elimino colonne superflue\n",
     "gdf = gdf.drop(columns=[\"id_area\", \"obj_id\", \"codice\", \"descrizione_codice\"])"
@@ -493,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "20d81422",
    "metadata": {},
    "outputs": [],
