--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,12 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
    "source": [
     "from shapely import Point\n",
+    "from shapely.geometry import MultiPolygon, Polygon\n",
+    "from shapely.ops import unary_union\n",
     "\n",
     "import geopandas as gpd\n",
     "\n",
@@ -52,13 +54,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
+   "id": "9fd56124",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_parchi = gpd.read_file(PATH_PARCHI_RAW)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "9383f129",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_PARCHI_RAW)\n",
-    "gdf.to_file(PATH_PARCHI_CLEAN)"
+    "def flatten_to_multipolygon(geoms):\n",
+    "    flat_polygons = []\n",
+    "    for geom in geoms:\n",
+    "        if isinstance(geom, Polygon):\n",
+    "            flat_polygons.append(geom)\n",
+    "        elif isinstance(geom, MultiPolygon):\n",
+    "            flat_polygons.extend(list(geom.geoms))\n",
+    "        else:\n",
+    "            continue  # ignora altri tipi (es. None)\n",
+    "    return MultiPolygon(flat_polygons)\n",
+    "\n",
+    "gdf_parchi_uniti = gpd.GeoDataFrame(\n",
+    "    gdf_parchi.groupby(\"PARCO\").agg({\n",
+    "        'ZONA': \"first\",\n",
+    "        'AREA': \"first\",\n",
+    "        'geometry': flatten_to_multipolygon\n",
+    "        })\n",
+    ").reset_index()\n",
+    "\n",
+    "gdf_parchi_uniti = gdf_parchi_uniti.set_crs('EPSG:4326').to_crs(\"EPSG:32632\")\n",
+    "gdf_parchi_uniti['PERIM_M'] = gdf_parchi_uniti.geometry.apply(lambda geom: unary_union(geom).boundary.length)\n",
+    "gdf_parchi_uniti['AREA_MQ'] = gdf_parchi_uniti.geometry.area\n",
+    "\n",
+    "gdf_parchi_uniti = gdf_parchi_uniti.to_crs('EPSG:4326')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "f7d3450c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_parchi.to_file(PATH_PARCHI_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
