fix aggr parchi

--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "9fd56124",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "9383f129",
    "metadata": {},
    "outputs": [],
@@ -97,12 +97,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "f7d3450c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_parchi.to_file(PATH_PARCHI_CLEAN, driver=\"GeoJSON\")"
+    "gdf_parchi_uniti.to_file(PATH_PARCHI_CLEAN, driver=\"GeoJSON\")"
    ]
   },
   {
