--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 80,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 81,
    "id": "93122f21",
    "metadata": {},
    "outputs": [],
@@ -76,54 +76,119 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "32ab11f6",
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "25312e4f",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Per trovare \"una strada\" che possa connettere i \"parchi_non_vicini\" per prima cosa ho deciso di trovare il loro \"centro\".  \n",
-    "Il problema consiste nell'esistenza di tante righe contenente uno stesso parco (dovuto ai vari poligoni).  \n",
-    "Usiamo \"geopandas_center\" per ricavare il centro di un parco durante il raggruppamento per nome."
+    "from shapely import LineString, MultiLineString\n",
+    "from shapely.ops import nearest_points\n",
+    "\n",
+    "# Lista per raccogliere risultati\n",
+    "risultati = []\n",
+    "\n",
+    "for idx_parco, parco in parchi_non_vicini.iterrows():\n",
+    "    \n",
+    "    # Calcolo distanza tra il parco e ogni tratto ciclabile\n",
+    "    distanze = gdf_ciclabili.geometry.distance(parco.geometry)\n",
+    "    \n",
+    "    # Trova il tratto ciclabile più vicino\n",
+    "    ciclabile_piu_vicina = gdf_ciclabili.loc[distanze.idxmin()]\n",
+    "    \n",
+    "    # Trova i due punti più vicini tra geometria del parco e del tratto\n",
+    "    punto_parco, punto_ciclabile = nearest_points(parco.geometry, ciclabile_piu_vicina.geometry)\n",
+    "    \n",
+    "    # Salva risultato\n",
+    "    risultati.append({\n",
+    "        'id_parco': parco.get('PARCO', idx_parco),  # personalizza la chiave ID se necessario\n",
+    "        'id_ciclabile': ciclabile_piu_vicina.get('id_amat', ciclabile_piu_vicina.name),\n",
+    "        'distanza_minima': punto_parco.distance(punto_ciclabile),\n",
+    "        'geometry': MultiLineString([LineString([punto_parco, punto_ciclabile])])\n",
+    "    })\n",
+    "\n",
+    "# Crea GeoDataFrame del risultato\n",
+    "df_risultati = gpd.GeoDataFrame(risultati, geometry='geometry', crs=\"EPSG:32632\").to_crs('EPSG:4326')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4246a995",
+   "execution_count": 83,
+   "id": "7c1bacee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_parco</th>\n",
+       "      <th>id_ciclabile</th>\n",
+       "      <th>distanza_minima</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PARCO DELLA CAVA DI MUGGIANO</td>\n",
+       "      <td>276</td>\n",
+       "      <td>1685.17654</td>\n",
+       "      <td>MULTILINESTRING ((9.06633 45.44065, 9.05828 45...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       id_parco  id_ciclabile  distanza_minima  \\\n",
+       "0  PARCO DELLA CAVA DI MUGGIANO           276       1685.17654   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  MULTILINESTRING ((9.06633 45.44065, 9.05828 45...  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def geopandas_center(polygons):\n",
-    "    gdf = gpd.GeoDataFrame(geometry=list(polygons))\n",
-    "    return gdf.union_all().centroid"
+    "df_risultati"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3425b6b2",
+   "execution_count": 84,
+   "id": "17b81427",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MULTILINESTRING ((9.066330415685773 45.44065006707306, 9.05827527105213 45.45471916947457))\n"
+     ]
+    }
+   ],
    "source": [
-    "parchi_non_vicini = parchi_non_vicini.to_crs(\"EPSG:4326\") # Più comodo per coordinate spaziali\n",
-    "parchi_raggruppati = gpd.GeoDataFrame(parchi_non_vicini.groupby(\"PARCO\")['geometry'].agg(geopandas_center)).reset_index()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9ae4c57",
-   "metadata": {},
-   "source": [
-    "Salviamo per test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "361e9c20",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parchi_raggruppati.to_file(PATH_ANALISI_TEST_CLEAN, driver=\"GeoJSON\")"
+    "print(df_risultati[\"geometry\"][0])"
    ]
   }
  ],
