update analisi con api google

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,19 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 79,
    "id": "772cee29",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
+    "from shapely import LineString, MultiLineString\n",
+    "from shapely.ops import nearest_points\n",
+    "\n",
     "import geopandas as gpd\n",
+    "import polyline\n",
     "\n",
     "from my_paths import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 80,
    "id": "9d3a6cf8",
    "metadata": {},
    "outputs": [],
@@ -32,7 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
+   "id": "f12793e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "API_KEY_GOOGLE = \"AIzaSyDpP7H4aWmK5ZFI0vBqTkcovlL2LN1C8ck\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "b420f93e",
    "metadata": {},
    "outputs": [],
@@ -48,61 +63,85 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4e11617",
+   "id": "eac173c6",
    "metadata": {},
    "source": [
-    "### Metodo per trovare intersezioni tra geometrie."
+    "## STEP 1"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7c2147d9",
+   "id": "a172fd9b",
    "metadata": {},
    "source": [
-    "Per farlo si crea un \"buffer\" di tot distanza (esempio 1000m) attorno a tutti gli oggetti geometrici.\n",
-    "Se quando si usa \"intersects.()\" su di un altro oggetto geometrico quello va a intersecarsi con il buffer allora restituisce True altrimenti False. Si crea una Series di True e False.  \n",
-    "Qui usiamo il \"not\" (~) per capire quale parco NON si interseca con il buffer di 1km per ogni ciclabile e ci restituisce il geodataframe con i parchi più lontani da quella distanza."
+    "Creiamo un \"buffer\" di contorno alle Multylinestring delle piste ciclabili (gli diamo spessore). Si è deciso per ora di  \n",
+    "impostare 200 --> 200 metri. Da verificare se modificare.  \n",
+    "Il buffer verrà usato per trovare intersezioni con le geometrie dei parchi.  \n",
+    "Il nuovo GeoDataFrame avrà tutti i parchi che NON si intersecano con le piste ciclabili."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "id": "93122f21",
    "metadata": {},
    "outputs": [],
    "source": [
-    "buffer_union = gdf_ciclabili.buffer(1000).union_all()\n",
-    "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(buffer_union)]"
+    "gdf_ciclabili_buffer = gdf_ciclabili.buffer(200).union_all()\n",
+    "parchi_non_vicini = gdf_parchi[~gdf_parchi.geometry.intersects(gdf_ciclabili_buffer)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e43c5e1b",
+   "metadata": {},
+   "source": [
+    "## STEP 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8949e0c",
+   "metadata": {},
+   "source": [
+    "Unisco tutte le piste ciclabili in un unica sola.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 94,
+   "id": "8f2a8b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_ciclabili_unite = gpd.GeoDataFrame([gdf_ciclabili.union_all()], columns=[\"geometry\"], crs=\"EPSG:32632\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b75fc020",
+   "metadata": {},
+   "source": [
+    "Trovati i parchi da \"servire\" con nuove ipotetiche piste ciclabili, andiamo a cercare i 2 punti più vicini tra la geometria delle piste ciclabili e i parchi. Scrorriamo quindi il dataframe dei parchi e facciamo la \"nearest_points\" delle due geometrie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "id": "25312e4f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shapely import LineString, MultiLineString\n",
-    "from shapely.ops import nearest_points\n",
-    "\n",
     "# Lista per raccogliere risultati\n",
     "risultati = []\n",
     "\n",
     "for idx_parco, parco in parchi_non_vicini.iterrows():\n",
-    "    \n",
-    "    # Calcolo distanza tra il parco e ogni tratto ciclabile\n",
-    "    distanze = gdf_ciclabili.geometry.distance(parco.geometry)\n",
-    "    \n",
-    "    # Trova il tratto ciclabile più vicino\n",
-    "    ciclabile_piu_vicina = gdf_ciclabili.loc[distanze.idxmin()]\n",
-    "    \n",
     "    # Trova i due punti più vicini tra geometria del parco e del tratto\n",
-    "    punto_parco, punto_ciclabile = nearest_points(parco.geometry, ciclabile_piu_vicina.geometry)\n",
+    "    punto_parco, punto_ciclabile = nearest_points(parco[\"geometry\"], gdf_ciclabili_unite[\"geometry\"][0])\n",
     "    \n",
     "    # Salva risultato\n",
     "    risultati.append({\n",
-    "        'id_parco': parco.get('PARCO', idx_parco),  # personalizza la chiave ID se necessario\n",
-    "        'id_ciclabile': ciclabile_piu_vicina.get('id_amat', ciclabile_piu_vicina.name),\n",
+    "        'id_parco': parco.get('PARCO', idx_parco),\n",
     "        'distanza_minima': punto_parco.distance(punto_ciclabile),\n",
     "        'geometry': MultiLineString([LineString([punto_parco, punto_ciclabile])])\n",
     "    })\n",
@@ -112,83 +151,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 83,
-   "id": "7c1bacee",
+   "cell_type": "markdown",
+   "id": "cefe3a2f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_parco</th>\n",
-       "      <th>id_ciclabile</th>\n",
-       "      <th>distanza_minima</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PARCO DELLA CAVA DI MUGGIANO</td>\n",
-       "      <td>276</td>\n",
-       "      <td>1685.17654</td>\n",
-       "      <td>MULTILINESTRING ((9.06633 45.44065, 9.05828 45...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       id_parco  id_ciclabile  distanza_minima  \\\n",
-       "0  PARCO DELLA CAVA DI MUGGIANO           276       1685.17654   \n",
-       "\n",
-       "                                            geometry  \n",
-       "0  MULTILINESTRING ((9.06633 45.44065, 9.05828 45...  "
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "df_risultati"
+    "## STEP 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da668fbd",
+   "metadata": {},
+   "source": [
+    "Dichiaro la funzione che utilizzeremo per trovare il percorso in bici tra i due punti grazie alle API di google maps."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "17b81427",
+   "execution_count": 96,
+   "id": "a711d508",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MULTILINESTRING ((9.066330415685773 45.44065006707306, 9.05827527105213 45.45471916947457))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df_risultati[\"geometry\"][0])"
+    "def richiedi_percorso_goole(origin:tuple[float, float], dest:tuple[float, float], api_key:str, mode:str = \"bicycling\"):\n",
+    "    \"\"\"\n",
+    "    Restituisce una Multylinestring del percorso da punto A (origin) a punto B (dest).\n",
+    "\n",
+    "    Args:\n",
+    "        origin (tuple[float, float]): Coordinate punto di partenza in formato: [Latitudine, Longitudine].\n",
+    "        dest (tuple[float, float]): Coordinate punto di arrivo in formato: [Latitudine, Longitudine].\n",
+    "        api_key (str): API_KEY di google maps per effettuare la richiesta.\n",
+    "        mode (str): Mezzo di trasporto da utilizzare per il calcolo: \"driving\", \"walking\", \"bicycling\", \"transit\".\n",
+    "                    \"bicycling\" verrà utilizzato di deafult.\n",
+    "    Returns:\n",
+    "        Multylinestring: Del tipo: [ [Longitudine, Latitudine], [Longitudine, Latitudine] ]. N.B: Sono inverse rispetto\n",
+    "                                    al formato dato in input, già pronte per kepler (google le usa al contrario).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    outputFormat = \"json\"   # Usiamo sempre questo\n",
+    "    origin_str = f\"{origin[1]},{origin[0]}\"\n",
+    "    dest_str = f\"{dest[1]},{dest[0]}\"\n",
+    "    parameters = f\"origin={origin_str}&destination={dest_str}&key={api_key}\"\n",
+    "    mode = \"bicycling\"  # Alternative: |    driving  |   walking    |   bicycling  |    transit\n",
+    "    url_API_directions = f\"https://maps.googleapis.com/maps/api/directions/{outputFormat}?{parameters}&mode={mode}\"\n",
+    "\n",
+    "    risposta_json = requests.get(url_API_directions).json()\n",
+    "    coordinates = polyline.decode(risposta_json['routes'][0]['overview_polyline']['points'])\n",
+    "    coordinates = [[x[1], x[0]] for x in coordinates]\n",
+    "    return MultiLineString([LineString(coordinates)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64a87f87",
+   "metadata": {},
+   "source": [
+    "Trovo quindi le nuove geometrie dei percorsi di google maps e li vado a sostituire alla sua vecchia geometria che era riferita ai \"nearest_points\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "bb21e9b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_risultati[\"geometry\"] = df_risultati[\"geometry\"].apply(\n",
+    "    lambda x: richiedi_percorso_goole(origin=x.geoms[0].coords[0],\n",
+    "                                      dest=x.geoms[0].coords[1],\n",
+    "                                      api_key=API_KEY_GOOGLE,\n",
+    "                                      mode=\"bicycling\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0bd0fee8",
+   "metadata": {},
+   "source": [
+    "Facciamo una eliminazione delle sovrapposizioni delle \"nuove ciclabili\" con quelle già esistenti per cercare di avere solo le nuove effettive piste da costruire.  \n",
+    "Per farlo bisogna lavorare di nuovo con il sistema \"EPSG:32632\" (metrico) e ci aiutiamo con un piccolo buffer (10 metri) sulle ciclabili.  \n",
+    "Per farlo si usa la funzione .difference delle Multilinestring."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "71b07026",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_risultati = df_risultati.to_crs(\"EPSG:32632\")\n",
+    "\n",
+    "gpf_percorsi_uniti = gpd.GeoDataFrame([df_risultati.union_all()], columns=[\"geometry\"])\n",
+    "gpf_ciclabili_uniti_con_buffer = gpd.GeoDataFrame([gdf_ciclabili.buffer(10).union_all()], columns=[\"geometry\"])\n",
+    "\n",
+    "gpf_percorsi_uniti['geometry'] = gpf_percorsi_uniti[\"geometry\"].apply(\n",
+    "    lambda geom: geom.difference(gpf_ciclabili_uniti_con_buffer.geometry)\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24914a2c",
+   "metadata": {},
+   "source": [
+    "Ora riconvertiamo in sistema Latitudine, Longitudine: 'EPSG:4326' e salviamo il risultato su Clean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "5719d0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gpf_percorsi_uniti.set_crs(\"EPSG:32632\").to_crs('EPSG:4326').to_file(PATH_ANALISI_TEST_CLEAN)"
    ]
   }
  ],
